Bug 101246 - LINEST and LOGEST matrix results #N/A are strings instead of errors
Summary: LINEST and LOGEST matrix results #N/A are strings instead of errors
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:5.3.0 target:5.2.1
Keywords:
Depends on:
Blocks:
 
Reported: 2016-08-01 10:13 UTC by raal
Modified: 2016-08-02 15:17 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description raal 2016-08-01 10:13:47 UTC
When matrix results contain #N/A error, these cells are strings instead of errors
Comment 1 Eike Rathke (retired, only occasionally showing up) 2016-08-01 10:31:42 UTC
Only for LINEST and LOGEST.
Comment 2 Commit Notification 2016-08-01 10:38:55 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8e495518c36359e565d6c172688e7120c477137f

Resolves: tdf#101246 errors are not strings

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Eike Rathke (retired, only occasionally showing up) 2016-08-01 11:06:05 UTC
Pending review https://gerrit.libreoffice.org/27775 for 5-2
Comment 4 Commit Notification 2016-08-02 15:17:51 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cb8be8a86845bfbee70e0d7787d882ef078eb97f&h=libreoffice-5-2

Resolves: tdf#101246 errors are not strings

It will be available in 5.2.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.