Resolves: tdf#101246 errors are not strings

Change-Id: I5a63dcc0452f0254e66e0ad743ae0d0926dfc14a
(cherry picked from commit 8e495518c36359e565d6c172688e7120c477137f)